@@ -1,11 +1,11 @@
 /*
- * Copyright 2012-2018 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,6 +17,7 @@
 package org.springframework.boot.gradle.tasks.run;
 
 import org.gradle.api.file.SourceDirectorySet;
+import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetOutput;
@@ -29,6 +30,29 @@ import org.gradle.api.tasks.SourceSetOutput;
  */
 public class BootRun extends JavaExec {
 
+	private boolean optimizedLaunch = true;
+
+	/**
+	 * Returns {@code true} if the JVM's launch should be optimized, otherwise
+	 * {@code false}. Defaults to {@code true}.
+	 * @return whether the JVM's launch should be optimized
+	 * @since 2.2.0
+	 */
+	@Input
+	public boolean isOptimizedLaunch() {
+		return this.optimizedLaunch;
+	}
+
+	/**
+	 * Sets whether the JVM's launch should be optimized. Defaults to {@code true}.
+	 * @param optimizedLaunch {@code true} if the JVM's launch should be optimised,
+	 * otherwise {@code false}
+	 * @since 2.2.0
+	 */
+	public void setOptimizedLaunch(boolean optimizedLaunch) {
+		this.optimizedLaunch = optimizedLaunch;
+	}
+
 	/**
 	 * Adds the {@link SourceDirectorySet#getSrcDirs() source directories} of the given
 	 * {@code sourceSet's} {@link SourceSet#getResources() resources} to the start of the
@@ -37,13 +61,16 @@ public class BootRun extends JavaExec {
 	 * @param sourceSet the source set
 	 */
 	public void sourceResources(SourceSet sourceSet) {
-		setClasspath(getProject()
-				.files(sourceSet.getResources().getSrcDirs(), getClasspath())
+		setClasspath(getProject().files(sourceSet.getResources().getSrcDirs(), getClasspath())
 				.filter((file) -> !file.equals(sourceSet.getOutput().getResourcesDir())));
 	}
 
 	@Override
 	public void exec() {
+		if (this.optimizedLaunch) {
+			setJvmArgs(getJvmArgs());
+			jvmArgs("-Xverify:none", "-XX:TieredStopAtLevel=1");
+		}
 		if (System.console() != null) {
 			// Record that the console is available here for AnsiOutput to detect later
 			this.getEnvironment().put("spring.output.ansi.console-available", true);
